--- a/Login/index.html
+++ b/Login/index.html
@@ -57,7 +57,8 @@
         </div>
     </div>
     <!-- login form end -->
-
+<div class="row justify-content-center">
+    
  <div class="col-md-6 ">
     <div class="card mt-3 mx-auto" id="card" style="width: 18rem;">
         <img src="https://static.vecteezy.com/system/resources/thumbnails/038/962/461/small/ai-generated-caucasian-successful-confident-young-businesswoman-ceo-boss-bank-employee-worker-manager-with-arms-crossed-in-formal-wear-isolated-in-white-background-photo.jpg" class="card-img-top" alt="...">
@@ -68,6 +69,7 @@
         </div>
       </div>
  </div>
+</div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
