--- a/fuction/index5.html
+++ b/fuction/index5.html
@@ -3,6 +3,7 @@
  let printNum1=()=>{
     let num =25;
     let printNum2=()=>{
+        let num=30;
         console.log("inner " + num); 
     }
     printNum2();
