--- a/fuction/index6.html
+++ b/fuction/index6.html
@@ -1,6 +1,6 @@
 	
 <!-- FUNCTION WITH FOUR WAYS RECURSION -->
- 
+<!--  
 <script>
     function fact(val){
         let f1;
@@ -16,4 +16,4 @@
     }
     console.log(fact(0));
     
-</script>
+</script> -->
