--- a/switch_pro/indnex.html
+++ b/switch_pro/indnex.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="main">
+        <form method="post"> 
+         <div>
+            <input type="text" name="num1" id="num1" placeholder="Enter a number1"><br><br>
+            <input type="text" name="num1" id="num1" placeholder="Enter a number1"><br><br>
+         </div>
+         </div>
+
+        </form>
+
+    </div>
     
 </body>
 </html>
