--- a/switch_pro/indnex.html
+++ b/switch_pro/indnex.html
@@ -10,7 +10,8 @@
         <form method="post"> 
          <div>
             <input type="text" name="num1" id="num1" placeholder="Enter a number1"><br><br>
-            <input type="text" name="num1" id="num1" placeholder="Enter a number1"><br><br>
+            <input type="text" name="num2" id="num2" placeholder="Enter a number2"><br><br>
+             <button type="submit">Submit</button>
          </div>
          </div>
 
