--- a/switch_pro/indnex.html
+++ b/switch_pro/indnex.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="main">
-        <form method="post"> 
-         <div>
-            <input type="text" name="num1" id="num1" placeholder="Enter a number1"><br><br>
-            <input type="text" name="num2" id="num2" placeholder="Enter a number2"><br><br>
-             <button type="submit">Submit</button>
-         </div>
-         </div>
-
+        <form method="post" onsubmit="printValue(); return false">
+            <div>
+                <input type="text" name="num1" id="num1" placeholder="Enter a number1"> <br><br>
+                <input type="text" name="num2" id="num2" placeholder="Enter a number2"> <br><br>
+                <button type="submit">submit</button>
+            </div>
         </form>
+        <div style="margin-top: 20px;" id="result">
+            <span id="num1-value">a is: </span> <br>
+            <span id="num2-value">b is: </span> <br>
 
+            <div class="box-button">
+                <button onclick="getOpration('add')" id="add">+</button>
+                <button onclick="getOpration('sub')" id="sub">-</button> <br>
+                <div class="p-2"></div>
+                <button onclick="getOpration('mul')" id="mul">*</button>
+                <button onclick="getOpration('div')" id="div">/</button>
+
+            </div><br><br>
+            <input type="text" id="ans" disabled>
+        </div>
     </div>
-    
+
+    <script src="script.js"></script>
 </body>
+
 </html>
