--- a/Array/index.html
+++ b/Array/index.html
@@ -1,13 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+<Script>
+                //    Array Method
+// let arr = [50,60,70,80,90];
+// console.log(arr);
 
-    <script src="script.js"></script>
-</body>
-</html>
+
+// let arr1 = new Array(1,2,3);
+// console.log(arr1);
+
+
+//push method
+// let arr = [50,60,70,80,90];
+//  arr.push(100);
+//  console.log(arr);
+
+//pop  method
+// let arr = [50,60,70,80,90];
+// arr.pop();
+// console.log(arr);
+
+
+//unshift method
+// let arr = [50,60,70,80,90];
+// arr.unshift(40);
+// console.log(arr);
+
+//shift method
+// let arr = [50,60,70,80,90];
+// arr.shift();
+// console.log(arr);
+
+// Slice method
+let arr = [50,60,70,80,90];
+let array = arr.slice(0,3);
+console.log(array);
+
+
+
+
+</Script>
