--- a/Array/index.html
+++ b/Array/index.html
@@ -30,11 +30,23 @@
 // console.log(arr);
 
 // Slice method
-let arr = [50,60,70,80,90];
-let array = arr.slice(0,3);
+// let arr = [50,60,70,80,90];
+// let array = arr.slice(0,3);
+// console.log(array);
+
+// Array length
+// let arr = [50,60,70,80,90];
+// let size = arr.length;
+// console.log(size);
+
+// Array toString
+
+// let arr = ["Banana", "Orange", "Apple", "Mango"];
+// document.getElementById("demo").innerHTML = arr.toString();
+
+// Array at
+let arr = ["Banana", "Orange", "Apple", "Mango"];
+let array = arr.at(3);
 console.log(array);
-
-
-
 
 </Script>
