--- a/Array/index.html
+++ b/Array/index.html
@@ -7,7 +7,6 @@
 // let arr1 = new Array(1,2,3);
 // console.log(arr1);
 
-
 //push method
 // let arr = [50,60,70,80,90];
 //  arr.push(100);
@@ -17,7 +16,6 @@
 // let arr = [50,60,70,80,90];
 // arr.pop();
 // console.log(arr);
-
 
 //unshift method
 // let arr = [50,60,70,80,90];
@@ -40,13 +38,37 @@
 // console.log(size);
 
 // Array toString
-
 // let arr = ["Banana", "Orange", "Apple", "Mango"];
 // document.getElementById("demo").innerHTML = arr.toString();
 
 // Array at
-let arr = ["Banana", "Orange", "Apple", "Mango"];
-let array = arr.at(3);
-console.log(array);
+// let arr = ["Banana", "Orange", "Apple", "Mango"];
+// let array = arr.at(3);
+// console.log(array);
+
+//Array join()
+// let arr = ["Banana", "Orange", "Apple", "Mango"];
+// let array = arr.join(" * ");
+// console.log(array);
+
+// Array delete()
+// let arr = ["Banana", "Orange", "Apple", "Mango"];
+// delete arr[1];
+// console.log(arr);
+
+//Array concat
+// let arr = ["Cecilie", "Lone"];
+// let array = ["Emil", "Tobias", "Linus"];
+// let arr1 = arr.concat(array);
+// console.log(arr1);
+
+// Array copyWithin()
+// let arr = ["Banana", "Orange", "Apple", "Mango"];
+// arr.copyWithin(0,2)
+// console.log(arr);
+
+// Array flat
+const myArr = [[1,2],[3,4],[5,6]];
+const newArr = myArr.flat();
 
 </Script>
