--- a/Array/index.html
+++ b/Array/index.html
@@ -68,7 +68,21 @@
 // console.log(arr);
 
 // Array flat
-const myArr = [[1,2],[3,4],[5,6]];
-const newArr = myArr.flat();
+// let myArr = [[1,2],[3,4],[5,6]];
+// let newArr = myArr.flat();
+// console.log(newArr);
+
+// Array splice
+// let fruits = ["Banana", "Orange", "Apple", "Mango"];
+// console.log(fruits);
+// fruits.splice(2, 0, "Lemon", "Kiwi");
+// console.log(fruits);
+
+// //Array toSpliced
+// const months = ["Jan", "Feb", "Mar", "Apr"];
+// console.log(months);
+
+// const spliced = months.toSpliced(0, 2);
+// console.log(spliced);
 
 </Script>
