--- a/String/index.html
+++ b/String/index.html
@@ -35,9 +35,14 @@
 // console.log(part);
 
 // // String toUpperCase()
-let text1 = "Hello World!";
-let text2 = text1.toUpperCase();
-console.log(text2);
+// let text1 = "Hello World!";
+// let text2 = text1.toUpperCase();
+// console.log(text2);
+
+// String toLowerCase()
+// let text1 = "Hello World!";
+// let text2 = text1.toLowerCase();
+// console.log(text2);
 
 
 </script>
