--- a/String/index.html
+++ b/String/index.html
@@ -44,5 +44,10 @@
 // let text2 = text1.toLowerCase();
 // console.log(text2);
 
+// String concat()
+let text1 = "Hello";
+let text2 = "World";
+let text3 = text1.concat(" ", text2);
+
 
 </script>
