--- a/String/index.html
+++ b/String/index.html
@@ -45,11 +45,28 @@
 // console.log(text2);
 
 // String concat()
-let text1 = "Hello";
-let text2 = "World";
-let text3 = text1.concat(" ", text2);
-console.log(text3d);
+// let text1 = "Hello";
+// let text2 = "World";
+// let text3 = text1.concat(" ", text2);
+// console.log(text3);
+
+// String trim()
+// let text1 = "      Hello World!      ";
+// let text2 = text1.trim();
+// console.log("Length text1 = " + text1.length + " Length text2 = " + text2.length);
+
+// String trimStart()
+// let text1 = "      Hello World!      ";
+// let text2 = text1.trimStart();
+// console.log("Length text1 = " + text1.length + " Length text2 = " + text2.length);
 
 
+// String trimEnd()
+// let text1 = "      Hello World!      ";
+// let text2 = text1.trimEnd();
+// console.log("Length text1 = " + text1.length + " Length text2 = " + text2.length);
 
+// padStart
+let text = "5";
+let padded = text.padStart(4,"0");
 </script>
