--- a/String/index.html
+++ b/String/index.html
@@ -67,6 +67,19 @@
 // console.log("Length text1 = " + text1.length + " Length text2 = " + text2.length);
 
 // padStart
-let text = "5";
-let padded = text.padStart(4,"0");
+// let text = "5";
+// let padded = text.padStart(4,"0");
+// console.log(padded);
+
+// padEnd
+// let text = "5";
+// let padded = text.padEnd(4,"0");
+// console.log(padded);
+
+// repeat
+let text = "Hello world!";
+let result = text.repeat(2);
+console.log(result);
+
+
 </script>
