--- a/String/index.html
+++ b/String/index.html
@@ -76,10 +76,16 @@
 // let padded = text.padEnd(4,"0");
 // console.log(padded);
 
-// repeat
-let text = "Hello world!";
-let result = text.repeat(2);
-console.log(result);
+// // repeat
+// let text = "Hello world!";
+// let result = text.repeat(2);
+// console.log(result);
+
+// replace
+let text = "Please visit Microsoft!";
+let newText = text.replace("Microsoft", "W3Schools");
+console.log(newText);
+
 
 
 </script>
