--- a/Array_function/index.html
+++ b/Array_function/index.html
@@ -27,9 +27,11 @@
     // console.log(index);
 
 //every
-    // let arr = [10,20,30,40,50]
-    // let index = arr.every((val)=> val===);
-    // console.log(index);
+    let arr = [10,20,30,40,50]
+    let index = arr.every((val)=> val>0);
+    console.log(index);
 
-    
+//map
+
+      
 </script>
