--- a/Array_function/index.html
+++ b/Array_function/index.html
@@ -49,19 +49,19 @@
     // })
 
     //filter
-    let user = [{
-        id: 1,
-        name: "komal",
-        email: "k123@gmail.com",
-    },
-    {
-        id: 2,
-        name: "Amita",
-        email: "a123@gmail.com",
-    }
-    ]
-    let data = user.filter((user)=>user.name!="komal")
-    console.log(data);
+    // let user = [{
+    //     id: 1,
+    //     name: "komal",
+    //     email: "k123@gmail.com",
+    // },
+    // {
+    //     id: 2,
+    //     name: "Amita",
+    //     email: "a123@gmail.com",
+    // }
+    // ]
+    // let data = user.fgilter((user)=>user.name!="komal")
+    // console.log(data);
     
     
 </script>
