--- a/String/index.html
+++ b/String/index.html
@@ -1,90 +1,120 @@
 <script>
-// String length
-// let text = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-// let length = text.length;
-// console.log(length);
+    // String length
+    // let text = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+    // let length = text.length;
+    // console.log(length);
 
-// String charAt
-// let text = "HELLO WORLD";
-// let char = text.charAt(0);
-// console.log(char);
+    // // String toUpperCase()
+    // let text1 = "Hello World!";
+    // let text2 = text1.toUpperCase();
+    // console.log(text2);
 
-// String charCodeAt
-// let text = "HELLO WORLD";
-// let char = text.charCodeAt(0);
-// console.log(char);
+    // String toLowerCase()
+    // let text1 = "Hello World!";
+    // let text2 = text1.toLowerCase();
+    // console.log(text2);
 
-// String at()
-// const name = "W3Schools";
-// let letter = name.at(2);
-// console.log(letter);
+    // String trim()
+    // let text1 = "      Hello World!      ";
+    // let text2 = text1.trim();
+    // console.log("Length text1 = " + text1.length + " Length text2 = " + text2.length);
 
-// // String slice()
-// let text = "Apple, Banana, Kiwi";
-// let part = text.slice(7, 13);
-// console.log(part);
+    // String Replace
+    //let text = "Hello World";
+    //console.log(text.replace("World", "JavaScript"));
 
-// // String substring()
-// let str = "Apple, Banana, Kiwi";
-// let part = str.substring(7, 13);
-// console.log(part);
+    // // String slice()
+    // let text = "Apple, Banana, Kiwi";
+    // let part = text.slice(7, 13);
+    // console.log(part);
 
-// // String substr()
-// let str = "Apple, Banana, Kiwi";
-// let part = str.substr(7, 6);
-// console.log(part);
+    // String substring()
+    // let str = "Apple, Banana, Kiwi";
+    // let part = str.substring(7, 13);
+    // console.log(part);
 
-// // String toUpperCase()
-// let text1 = "Hello World!";
-// let text2 = text1.toUpperCase();
-// console.log(text2);
+    // String Includes
+    // let text = "Hello World";
+    // console.log(text.includes("World"));
 
-// String toLowerCase()
-// let text1 = "Hello World!";
-// let text2 = text1.toLowerCase();
-// console.log(text2);
+    //String Split
+    // let text = "Hello,World,JavaScript";
+    // console.log(text.split(","));
 
-// String concat()
-// let text1 = "Hello";
-// let text2 = "World";
-// let text3 = text1.concat(" ", text2);
-// console.log(text3);
+    // String concat()
+    // let text1 = "Hello";
+    // let text2 = "World";
+    // let text3 = text1.concat(" ", text2);
+    // console.log(text3)
 
-// String trim()
-// let text1 = "      Hello World!      ";
-// let text2 = text1.trim();
-// console.log("Length text1 = " + text1.length + " Length text2 = " + text2.length);
-
-// String trimStart()
-// let text1 = "      Hello World!      ";
-// let text2 = text1.trimStart();
-// console.log("Length text1 = " + text1.length + " Length text2 = " + text2.length);
+    // String Repeat
+    // let text = "Hello ";
+    // console.log(text.repeat(3));
 
 
-// String trimEnd()
-// let text1 = "      Hello World!      ";
-// let text2 = text1.trimEnd();
-// console.log("Length text1 = " + text1.length + " Length text2 = " + text2.length);
 
-// padStart
-// let text = "5";
-// let padded = text.padStart(4,"0");
-// console.log(padded);
 
-// padEnd
-// let text = "5";
-// let padded = text.padEnd(4,"0");
-// console.log(padded);
 
-// // repeat
-// let text = "Hello world!";
-// let result = text.repeat(2);
-// console.log(result);
 
-// replace
-let text = "Please visit Microsoft!";
-let newText = text.replace("Microsoft", "W3Schools");
-console.log(newText);
+
+    // String charAt
+    // let text = "HELLO WORLD";
+    // let char = text.charAt(0);
+    // console.log(char);
+
+    // String charCodeAt
+    // let text = "HELLO WORLD";
+    // let char = text.charCodeAt(0);
+    // console.log(char);
+
+    // String at()
+    // const name = "W3Schools";
+    // let letter = name.at(2);
+    // console.log(letter);
+
+    // // String substr()
+    // let str = "Apple, Banana, Kiwi";
+    // let part = str.substr(7, 6);
+    // console.log(part);
+
+
+    // String concat()
+    // let text1 = "Hello";
+    // let text2 = "World";
+    // let text3 = text1.concat(" ", text2);
+    // console.log(text3);
+
+
+    // String trimStart()
+    // let text1 = "      Hello World!      ";
+    // let text2 = text1.trimStart();
+    // console.log("Length text1 = " + text1.length + " Length text2 = " + text2.length);
+
+
+    // String trimEnd()
+    // let text1 = "      Hello World!      ";
+    // let text2 = text1.trimEnd();
+    // console.log("Length text1 = " + text1.length + " Length text2 = " + text2.length);
+
+    // padStart
+    // let text = "5";
+    // let padded = text.padStart(4,"0");
+    // console.log(padded);
+
+    // padEnd
+    // let text = "5";
+    // let padded = text.padEnd(4,"0");
+    // console.log(padded);
+
+    // // repeat
+    // let text = "Hello world!";
+    // let result = text.repeat(2);
+    // console.log(result);
+
+    // replace
+    let text = "Please visit Microsoft!";
+    let newText = text.replace("Microsoft", "W3Schools");
+    console.log(newText);
 
 
 
