--- a/String/index.html
+++ b/String/index.html
@@ -51,11 +51,21 @@
     // let text = "Hello ";
     // console.log(text.repeat(3));
 
+    // String PadStart
+    //     let text = "5";
+    // console.log(text.padStart(4, "0"));
 
+    // String PadEnd
+    // let text = "5";
+    // console.log(text.padEnd(4, "0"));
 
+    // String Match
+    // let text = "JavaScript is awesome";
+    // console.log(text.match(/a/g));
 
-
-
+    //  String Search
+    // let text = "Hello JavaScript";
+    // console.log(text.search("JavaScript"));
 
     // String charAt
     // let text = "HELLO WORLD";
