--- a/String/index.html
+++ b/String/index.html
@@ -122,9 +122,9 @@
     // console.log(result);
 
     // replace
-    let text = "Please visit Microsoft!";
-    let newText = text.replace("Microsoft", "W3Schools");
-    console.log(newText);
+    // let text = "Please visit Microsoft!";
+    // let newText = text.replace("Microsoft", "W3Schools");
+    // console.log(newText);
 
 
 
