--- a/Array_method/index.html
+++ b/Array_method/index.html
@@ -7,6 +7,13 @@
 // let arr1 = new Array(1,2,3);
 // console.log(arr1);
 
+
+
+// Array length
+// let arr = [50,60,70,80,90];
+// let size = arr.length;
+// console.log(size);
+
 //push method
 // let arr = [50,60,70,80,90];
 //  arr.push(100);
@@ -27,15 +34,44 @@
 // arr.shift();
 // console.log(arr);
 
+// Array Map
+// let numbers = [1, 2, 3];
+// let doubled = numbers.map(num => num * 2);
+// console.log(doubled);
+
+//  Array Filter
+// let numbers = [1, 2, 3, 4, 5];
+// let evenNumbers = numbers.filter(num => num % 2 === 0);
+// console.log(evenNumbers);
+
+// Array Reduce
+// let numbers = [1, 2, 3, 4];
+// let sum = numbers.reduce((acc, num) => acc + num, 0);
+// console.log(sum);
+
+// Array Find
+// let numbers = [1, 2, 3, 4, 5];
+// let result = numbers.find(num => num > 3);
+// console.log(result);
+
+// Array Sort
+// let fruits = ["Banana", "Apple", "Cherry"];
+// console.log(fruits.sort());
+
+// Array Reverse
+// let arr = [1, 2, 3, 4, 5];
+// console.log(arr.reverse());
+
+// Array splice
+// let fruits = ["Banana", "Orange", "Apple", "Mango"];
+// console.log(fruits);
+// fruits.splice(2, 0, "Lemon", "Kiwi");
+// console.log(fruits);
+
 // Slice method
 // let arr = [50,60,70,80,90];
 // let array = arr.slice(0,3);
 // console.log(array);
-
-// Array length
-// let arr = [50,60,70,80,90];
-// let size = arr.length;
-// console.log(size);
 
 // Array toString
 // let arr = ["Banana", "Orange", "Apple", "Mango"];
@@ -72,11 +108,7 @@
 // let newArr = myArr.flat();
 // console.log(newArr);
 
-// Array splice
-// let fruits = ["Banana", "Orange", "Apple", "Mango"];
-// console.log(fruits);
-// fruits.splice(2, 0, "Lemon", "Kiwi");
-// console.log(fruits);
+
 
 // //Array toSpliced
 // const months = ["Jan", "Feb", "Mar", "Apr"];
