--- a/Array_method/index.html
+++ b/Array_method/index.html
@@ -1,180 +1,171 @@
 <Script>
-                //    Array Method
-// let arr = [50,60,70,80,90];
-// console.log(arr);
+    //    Array Method
+    // let arr = [50,60,70,80,90];
+    // console.log(arr);
 
 
-// let arr1 = new Array(1,2,3);
-// console.log(arr1);
-
-
-
-// Array length
-// let arr = [50,60,70,80,90];
-// let size = arr.length;
-// console.log(size);
-
-//push method
-// let arr = [50,60,70,80,90];
-//  arr.push(100);
-//  console.log(arr);
-
-//pop  method
-// let arr = [50,60,70,80,90];
-// arr.pop();
-// console.log(arr);
-
-//unshift method
-// let arr = [50,60,70,80,90];
-// arr.unshift(40);
-// console.log(arr);
-
-//shift method
-// let arr = [50,60,70,80,90];
-// arr.shift();
-// console.log(arr);
-
-// Array Map
-// let numbers = [1, 2, 3];
-// let doubled = numbers.map(num => num * 2);
-// console.log(doubled);
-
-//  Array Filter
-// let numbers = [1, 2, 3, 4, 5];
-// let evenNumbers = numbers.filter(num => num % 2 === 0);
-// console.log(evenNumbers);
-
-// Array Reduce
-// let numbers = [1, 2, 3, 4];
-// let sum = numbers.reduce((acc, num) => acc + num, 0);
-// console.log(sum);
-
-// Array Find
-// let numbers = [1, 2, 3, 4, 5];
-// let result = numbers.find(num => num > 3);
-// console.log(result);
-
-// Array Sort
-// let fruits = ["Banana", "Apple", "Cherry"];
-// console.log(fruits.sort());
-
-// Array Reverse
-// let arr = [1, 2, 3, 4, 5];
-// console.log(arr.reverse());
-
-// Array splice
-// let fruits = ["Banana", "Orange", "Apple", "Mango"];
-// console.log(fruits);
-// fruits.splice(2, 0, "Lemon", "Kiwi");
-// console.log(fruits);
-
-Array IndexOf
-
-let arr = [10, 20, 30, 40];
-console.log(arr.indexOf(30));
-
-15. Array LastIndexOf
-
-let arr = [10, 20, 30, 10, 40];
-console.log(arr.lastIndexOf(10));
-
-16. Array Some
-
-let numbers = [1, 2, 3, 4, 5];
-console.log(numbers.some(num => num > 3));
-
-17. Array Every
-
-let numbers = [2, 4, 6, 8];
-console.log(numbers.every(num => num % 2 === 0));
-
-18. Array Fill
-
-let arr = new Array(5).fill(0);
-console.log(arr);
-
-19. Array Join
-
-let arr = ["Hello", "World", "JavaScript"];
-console.log(arr.join(" - "));
-
-20. Array Includes
-
-let arr = [1, 2, 3, 4, 5];
-console.log(arr.includes(3));
-
-21. Array Flat
-
-let arr = [1, [2, 3], [4, 5]];
-console.log(arr.flat());
-
-22. Array CopyWithin
-
-let arr = [1, 2, 3, 4, 5];
-arr.copyWithin(1, 3);
-console.log(arr);
-
-// Array FindIndex
-let numbers = [10, 20, 30, 40];
-console.log(numbers.findIndex(num => num === 30));
-
-// // Array Entries
-// let arr = ['a', 'b', 'c'];
-// let iterator = arr.entries();
-// console.log(iterator.next().value);
-
-// //Array Keys
-// let arr = ['a', 'b', 'c'];
-// let iterator = arr.keys();
-// console.log(iterator.next().value);
-
-// Slice method
-// let arr = [50,60,70,80,90];
-// let array = arr.slice(0,3);
-// console.log(array);
-
-// Array toString
-// let arr = ["Banana", "Orange", "Apple", "Mango"];
-// document.getElementById("demo").innerHTML = arr.toString();
-
-// Array at
-// let arr = ["Banana", "Orange", "Apple", "Mango"];
-// let array = arr.at(3);
-// console.log(array);
-
-//Array join()
-// let arr = ["Banana", "Orange", "Apple", "Mango"];
-// let array = arr.join(" * ");
-// console.log(array);
-
-// Array delete()
-// let arr = ["Banana", "Orange", "Apple", "Mango"];
-// delete arr[1];
-// console.log(arr);
-
-//Array concat
-// let arr = ["Cecilie", "Lone"];
-// let array = ["Emil", "Tobias", "Linus"];
-// let arr1 = arr.concat(array);
-// console.log(arr1);
-
-// Array copyWithin()
-// let arr = ["Banana", "Orange", "Apple", "Mango"];
-// arr.copyWithin(0,2)
-// console.log(arr);
-
-// Array flat
-// let myArr = [[1,2],[3,4],[5,6]];
-// let newArr = myArr.flat();
-// console.log(newArr);
+    // let arr1 = new Array(1,2,3);
+    // console.log(arr1);
 
 
 
-// //Array toSpliced
-// const months = ["Jan", "Feb", "Mar", "Apr"];
-// console.log(months);
+    // Array length
+    // let arr = [50,60,70,80,90];
+    // let size = arr.length;
+    // console.log(size);
 
-// const spliced = months.toSpliced(0, 2);
-// console.log(spliced);
+    //push method
+    // let arr = [50,60,70,80,90];
+    //  arr.push(100);
+    //  console.log(arr);
+
+    //pop  method
+    // let arr = [50,60,70,80,90];
+    // arr.pop();
+    // console.log(arr);
+
+    //unshift method
+    // let arr = [50,60,70,80,90];
+    // arr.unshift(40);
+    // console.log(arr);
+
+    //shift method
+    // let arr = [50,60,70,80,90];
+    // arr.shift();
+    // console.log(arr);
+
+    // Array Map
+    // let numbers = [1, 2, 3];
+    // let doubled = numbers.map(num => num * 2);
+    // console.log(doubled);
+
+    //  Array Filter
+    // let numbers = [1, 2, 3, 4, 5];
+    // let evenNumbers = numbers.filter(num => num % 2 === 0);
+    // console.log(evenNumbers);
+
+    // Array Reduce
+    // let numbers = [1, 2, 3, 4];
+    // let sum = numbers.reduce((acc, num) => acc + num, 0);
+    // console.log(sum);
+
+    // Array Find
+    // let numbers = [1, 2, 3, 4, 5];
+    // let result = numbers.find(num => num > 3);
+    // console.log(result);
+
+    // Array Sort
+    // let fruits = ["Banana", "Apple", "Cherry"];
+    // console.log(fruits.sort());
+
+    // Array Reverse
+    // let arr = [1, 2, 3, 4, 5];
+    // console.log(arr.reverse());
+
+    // Array splice
+    // let fruits = ["Banana", "Orange", "Apple", "Mango"];
+    // console.log(fruits);
+    // fruits.splice(2, 0, "Lemon", "Kiwi");
+    // console.log(fruits);
+
+    // Array IndexOf
+    // let arr = [10, 20, 30, 40];
+    // console.log(arr.indexOf(30));
+
+    // Array LastIndexOf
+    // let arr = [10, 20, 30, 10, 40];
+    // console.log(arr.lastIndexOf(10));
+
+    //  Array Some
+    // let numbers = [1, 2, 3, 4, 5];
+    // console.log(numbers.some(num => num > 3));
+
+    // Array Every
+    // let numbers = [2, 4, 6, 8];
+    // console.log(numbers.every(num => num % 2 === 0));
+
+    // Array Fill
+    // let arr = new Array(5).fill(0);
+    // console.log(arr);
+
+    // Array Join
+    // let arr = ["Hello", "World", "JavaScript"];
+    // console.log(arr.join(" - "));
+
+    //  Array Includes
+    // let arr = [1, 2, 3, 4, 5];
+    // console.log(arr.includes(3));
+
+    // Array Flat
+    // let arr = [1, [2, 3], [4, 5]];
+    // console.log(arr.flat());
+
+    // Array CopyWithin
+    // let arr = [1, 2, 3, 4, 5];
+    // arr.copyWithin(1, 3);
+    // console.log(arr);
+
+    // Array FindIndex
+    // let numbers = [10, 20, 30, 40];
+    // console.log(numbers.findIndex(num => num === 30));
+
+    // // Array Entries
+    // let arr = ['a', 'b', 'c'];
+    // let iterator = arr.entries();
+    // console.log(iterator.next().value);
+
+    // //Array Keys
+    // let arr = ['a', 'b', 'c'];
+    // let iterator = arr.keys();
+    // console.log(iterator.next().value);
+
+    // Slice method
+    // let arr = [50,60,70,80,90];
+    // let array = arr.slice(0,3);
+    // console.log(array);
+
+    // Array toString
+    // let arr = ["Banana", "Orange", "Apple", "Mango"];
+    // document.getElementById("demo").innerHTML = arr.toString();
+
+    // Array at
+    // let arr = ["Banana", "Orange", "Apple", "Mango"];
+    // let array = arr.at(3);
+    // console.log(array);
+
+    //Array join()
+    // let arr = ["Banana", "Orange", "Apple", "Mango"];
+    // let array = arr.join(" * ");
+    // console.log(array);
+
+    // Array delete()
+    // let arr = ["Banana", "Orange", "Apple", "Mango"];
+    // delete arr[1];
+    // console.log(arr);
+
+    //Array concat
+    // let arr = ["Cecilie", "Lone"];
+    // let array = ["Emil", "Tobias", "Linus"];
+    // let arr1 = arr.concat(array);
+    // console.log(arr1);
+
+    // Array copyWithin()
+    // let arr = ["Banana", "Orange", "Apple", "Mango"];
+    // arr.copyWithin(0,2)
+    // console.log(arr);
+
+    // Array flat
+    // let myArr = [[1,2],[3,4],[5,6]];
+    // let newArr = myArr.flat();
+    // console.log(newArr);
+
+
+
+    // //Array toSpliced
+    // const months = ["Jan", "Feb", "Mar", "Apr"];
+    // console.log(months);
+
+    // const spliced = months.toSpliced(0, 2);
+    // console.log(spliced);
 
 </Script>
