--- a/Array_function/index1.html
+++ b/Array_function/index1.html
@@ -6,9 +6,9 @@
     console.log(squ);
 
     // Convert Strings to Uppercase
-    const words = ["apple", "banana", "cherry"];
-    const upper = words.map(word => word.toUpperCase());
-    console.log(upper);
+    // const words = ["apple", "banana", "cherry"];
+    // const upper = words.map(word => word.toUpperCase());
+    // console.log(upper);
 
     // Extract Names from an Array of Objects
     const users = [
@@ -18,4 +18,30 @@
     const names = users.map(user => user.name);
     console.log(names);
 
+    // Add a New Property to Each Object
+    const student = [
+        { name: "komal", age: 20 },
+        { name: "amita", age: 42 }
+    ]
+    const newStudent = student.map(val => ({ ...val, grade: "A" }));
+    console.log(newStudent);
+
+    // Filter Even Numbers    
+    const even = [1, 2, 3, 4, 5, 6, 7];
+    const newEven = even.filter(val => val % 2 === 0);
+    console.log(newEven)
+
+    // Filter Strings Starting with 'A'
+    const words = ["Apple", "Banana", "Avacado", "Grapes"];
+    const capital = words.filter(val => val.startsWith('A'));
+    console.log(capital);
+
+    // Filter Adults from a List of People
+    const people = [
+        { name: "komal", age: 20 },
+        { name: "amita", age: 15 },
+        { name: "sohi", age: 25 },
+    ]
+    const Adult = people.filter(val => val.age >= 18);
+    console.log(Adult)
 </script>
