--- a/Array_function/index1.html
+++ b/Array_function/index1.html
@@ -44,4 +44,26 @@
     ]
     const Adult = people.filter(val => val.age >= 18);
     console.log(Adult)
+
+    // Print Each Element in an Array
+    const fruits = ["Mango", "Apple", "Orange"];
+    fruits.forEach(val => console.log(val));
+
+    // Calculate Sum of an Array
+    const numb = [10, 20, 30];
+    let sum = 0;
+    numb.forEach(val => sum += val);
+    console.log(sum);
+
+    // Find Index of an Element
+    const colors = ["Red", "Green", "Blue"];
+    console.log(colors.indexOf("Green"));
+
+    // Find Index of First Even Number
+    const numbers = [1, 3, 7, 8, 10];
+    const index = numbers.findIndex(val => val % 2 === 0);
+    console.log(index);
+
+
+
 </script>
