--- a/Array_function/index1.html
+++ b/Array_function/index1.html
@@ -27,8 +27,8 @@
     console.log(newStudent);
 
     // Filter Even Numbers    
-    const even = [1, 2, 3, 4, 5, 6, 7];
-    const newEven = even.filter(val => val % 2 === 0);
+    const evn = [1, 2, 3, 4, 5, 6, 7];
+    const newEven = evn.filter(val => val % 2 === 0);
     console.log(newEven)
 
     // Filter Strings Starting with 'A'
@@ -61,7 +61,44 @@
 
     // Find Index of First Even Number
     const numbers = [1, 3, 7, 8, 10];
-    const index = numbers.findIndex(val => val % 2 === 0);
+    const even = numbers.findIndex(val => val % 2 === 0);
+    console.log(even);
+
+    // Check If an Element Exists in an Array
+    let str = ["Alice", "Bob", "Charlie"]
+    let checkStr = str.includes('Bob');
+    console.log(checkStr);
+
+    // Check If All Numbers Are Positive
+    const nums = [1, 2, 3, 4, 5];
+    const positive = nums.every(num => num > 0);
+    console.log(positive);
+
+    // Check If Any Number is Negative
+    const neg = [1, 2, -3, 4, 5];
+    const negative = neg.some(num => num < 0);
+    console.log(negative);
+
+    // Transform Array of Objects Using map()
+    const stud = [
+        { name: "komal", marks: 20 },
+        { name: "amita", marks: 77 },
+        { name: "sohi", marks: 50 }
+    ]
+    const pass = stud.map(val => ({ ...val, pass: val.marks >= 50 }));
+    console.log(pass);
+
+    // Filter Unique Values Using filter() and indexOf()
+    const arr = [1, 2, 3, 2, 4, 3, 5]
+    const unique = arr.filter((val, ind, self) => self.indexOf(val) === ind);
+    console.log(unique);
+
+    // Find First Occurrence of a Specific Object Using findIndex()
+    const emps = [
+        { id: 1, name: "komal" },
+        { id: 2, name: "amita" },
+    ];
+    const index = emps.findIndex(emp => emp.id === 2);
     console.log(index);
 
 
