--- a/Array_function/index.html
+++ b/Array_function/index.html
@@ -1,9 +1,9 @@
 <script>
 
-    //  forEach   
-    // let arr = [10,20,30,40,50];
-    // arr.forEach((ele)=>{
-    //     console.log(ele*2);
+    // //  forEach   
+    // let arr = [10, 20, 30, 40, 50];
+    // arr.forEach((ele) => {
+    //     console.log(ele * 2);
     // })
 
     // indexOf
@@ -31,22 +31,25 @@
     // let index = arr.every((val) => val > 0);
     // console.log(index);
 
-    //map
-    // let user = [{
-    //     id: 1,
-    //     name: "komal",
-    //     email: "k123@gmail.com",
-    // },
-    // {
-    //     id: 2,
-    //     name: "Amita",
-    //     email: "a123@gmail.com",
-    // }
-    // ]
-    // user.map((user, index) => {
-    //     console.log(user);
+    let newArr = arr.map(num => num * 2);
+    console.log(newArr);
 
-    // })
+    //    // map
+    //     let user = [{
+    //         id: 1,
+    //         name: "komal",
+    //         email: "k123@gmail.com",
+    //     },
+    //     {
+    //         id: 2,
+    //         name: "Amita",
+    //         email: "a123@gmail.com",
+    //     }
+    //     ]
+    //     user.map((user, index) => {
+    //         console.log(user);
+
+    //     })
 
     //filter
     // let user = [{
@@ -60,8 +63,8 @@
     //     email: "a123@gmail.com",
     // }
     // ]
-    // let data = user.fgilter((user)=>user.name!="komal")
+    // let data = user.filter((user)=>user.name!="komal")
     // console.log(data);
-    
-    
+
+
 </script>
