--- a/looping_array/index.html
+++ b/looping_array/index.html
@@ -25,17 +25,8 @@
     // console.log(arr1);
 
     // filter
-
-
-    // let arr=[10,20,30,40,55];
-// let oddNum=arr.filter((num)=>num %2 !==0);
-// console.log(oddNum);
-
-
-
-
-
-
-
+    let arr=[5,8,3,7];
+    let even=arr.filter((num)=>num %2 ===0);
+    console.log(even);
 
 </script>
