--- a/method_practice/map_fun/index.html
+++ b/method_practice/map_fun/index.html
@@ -53,12 +53,13 @@
     // console.log(str);
 
     // 7.Calculate age from birth years
-    let arr = [1990, 1995, 2000];
-    let ages = arr.map((year) => {
-        return new Date().getFullYear() - year
-    });
-    console.log(ages);
+    // let arr = [1990, 1995, 2000];
+    // let ages = arr.map((year) => {
+    //     return new Date().getFullYear() - year
+    // });
+    // console.log(ages);
 
+   
 
 
 
