--- a/method_practice/filter_fun/index.html
+++ b/method_practice/filter_fun/index.html
@@ -5,8 +5,39 @@
     //  return num % 2 === 0;
     // });
     // console.log(even);
-    
-    // 9.
-    
+
+    // 9.Filter names starting with 'A'
+    // let name = ["Amita", "Amar","Denish"];
+    // let arr = name.filter((names)=>{
+    //     return names.startsWith("A");
+    // });
+    // console.log(arr);
+
+    // 10.Filter numbers greater than 10
+    // let arr =[10,20,90,70];
+    // let greater = arr.filter((num)=>{
+    //     return num > 10;
+    // });
+    // console.log(greater);
+
+    // 11.Filter objects where age > 18
+    let person = [
+        {
+            name: "komal",
+            age: 17,
+        },
+        {
+            name: "payal",
+            age: 20,
+
+        },
+        {
+            name: "sonu",
+            age:28,
+
+        }
+    ]
+
+
 
 </script>
