--- a/method_practice/filter_fun/index.html
+++ b/method_practice/filter_fun/index.html
@@ -21,22 +21,25 @@
     // console.log(greater);
 
     // 11.Filter objects where age > 18
-    let person = [
-        {
-            name: "komal",
-            age: 17,
-        },
-        {
-            name: "payal",
-            age: 20,
+    // let person = [
+    //     {
+    //         name: "komal",
+    //         age: 17,
+    //     },
+    //     {
+    //         name: "payal",
+    //         age: 20,
 
-        },
-        {
-            name: "sonu",
-            age:28,
+    //     },
+    //     {
+    //         name: "sonu",
+    //         age:28,
 
-        }
-    ]
+    //     }
+    // ];
+    // let ages = person.filter(per => per.age > 18);
+    // console.log(ages);
+    
 
 
 
