--- a/method_practice/reduce_fun/index.html
+++ b/method_practice/reduce_fun/index.html
@@ -1,19 +1,28 @@
 <script>
-//  15.Find sum of an array
-// let number =[1,2,3,4,5];
-// let sum = number.reduce((acc,num)=> {
-// return  acc+num
-// });
-// console.log(sum);
+    //  15.Find sum of an array
+    // let number =[1,2,3,4,5];
+    // let sum = number.reduce((acc,num)=> {
+    // return  acc+num
+    // });
+    // console.log(sum);
 
-// 16.Find the maximum number in an array
-// let number = [10, 50, 30, 70, 20];
-// let max = number.reduce((acc,num)=>{
-//     return num > acc ? num : acc;
-// });
-// console.log(max);
+    // 16.Find the maximum number in an array
+    // let number = [10, 50, 30, 70, 20];
+    // let max = number.reduce((acc,num)=>{
+    //     return num > acc ? num : acc;
+    // });
+    // console.log(max);
 
-//17.Count occurrences of elements in an array
+    //17.Count occurrences of elements in an array
+    let str = ""
+    let name = ["apple", "banana", "apple", "cherry", "banana", "apple"];
+    let ele = name.reduce((acc, val) => {
+
+    }, {})
+    console.log(ele);
+
+
+
 
 
 
