--- a/method_practice/reduce_fun/index.html
+++ b/method_practice/reduce_fun/index.html
@@ -21,6 +21,10 @@
     }, {})
     console.log(ele);
 
+    //18. 
+    const arr = [[1,2],[3,4],[5,6]];
+    const flat = arr.reduce((acc,val) => acc.concat(val),[]);
+    console.log(flat);
 
 
 
