--- a/slide/indexl.html
+++ b/slide/indexl.html
@@ -19,8 +19,10 @@
         <div class="slider-item d-none fade">
             <img src="./images/img2.jpg" alt="">
         </div>
-        <button class="prev" onclick="currenSlide(-1)">Prev</button>
-        <button class="next" onclick="currenSlide(1)">Next</button>
+        <button class="prev" onclick="currSlide(-1)">Prev</button>
+        
+        <button class="next" onclick="currSlide(1)">Next</button>
+        
     </div>
 
     <script src="./script/script.js"></script>
