--- a/slide/indexl.html
+++ b/slide/indexl.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
 </head>
 
@@ -20,10 +21,15 @@
         <div class="slider-item d-none fade">
             <img src="./images/img2.jpg" alt="">
         </div>
-        <button class="prev" onclick="currSlide(-1)">Prev</button>
+        <button class="prev" onclick="currSlide(-1)"><i class="fa-solid fa-arrow-left"></i></button>
 
-        <button class="next" onclick="currSlide(1)">Next</button>
-        
+        <button class="next" onclick="currSlide(1)"><i class="fa-solid fa-arrow-right"></i></button>
+        <div class="indicator-container">
+            <span class="dot active-dot" onclick="setSlide(1)"></span>
+            <span class="dot" onclick="setSlide(2)"></span>
+            <span class="dot" onclick="setSlide(3)"></span>
+        </div>
+
     </div>
 
     <script src="./script/script.js"></script>
