--- a/try&catch/errors_types/index.html
+++ b/try&catch/errors_types/index.html
@@ -65,4 +65,12 @@
     }
 
     riskyFunction();
+
+    // 6. Handling Undefined Variables
+
+    try {
+        console.log(undefinedVariable);
+    } catch (error) {
+        console.log("Caught an error:", error.message);
+    }
 </script>
