--- a/try&catch/errors_types/index.html
+++ b/try&catch/errors_types/index.html
@@ -93,4 +93,18 @@
     } catch (outerError) {
         console.log("Outer catch:", outerError.message);
     }
+
+    // 9. Custom Error Class
+    class CustomError extends Error {
+        constructor(message) {
+            super(message);
+            this.name = "CustomError";
+        }
+    }
+
+    try {
+        throw new CustomError("This is a custom error");
+    } catch (error) {
+        console.log(`${error.name}: ${error.message}`);
+    }
 </script>
