--- a/DOM&BOM/index.html
+++ b/DOM&BOM/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="main-content">
+        <h2 id="title">Hello wordl.....</h2>
+    </div>
+
+    <script>
+        let title = document.getElementById('title');
+        console.log(title.textContent);
+    </script>
+
 </body>
+
 </html>
