--- a/DOM&BOM/index.html
+++ b/DOM&BOM/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="main-content">
-        <h2 id="title">Hello wordl.....</h2>
+        <h2 id="title">Hello js.....</h2>
     </div>
 
     <script>
