--- a/DOM&BOM/index.html
+++ b/DOM&BOM/index.html
@@ -9,12 +9,15 @@
 
 <body>
     <div class="main-content">
-        <h2 id="title">Hello js.....</h2>
+        <h2 id="title">Hello, goood morning</h2>
     </div>
 
     <script>
-        let title = document.getElementById('title');
-        console.log(title.textContent);
+        // let title = document.getElementById('title');
+        // console.log(title.textContent);
+        let title=document.querySelector('.main-cotent, #title');
+        console.log(title.innerHTML);
+
     </script>
 
 </body>
