--- a/Form-validation/index.html
+++ b/Form-validation/index.html
@@ -5,51 +5,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 
 <body>
 
- <div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <form action="" method="post" onsubmit="validate(); return false">
-                <h2>Sing-Up</h2>
-                <!-- username -->
-                <div class="mb-3">
-                    <label for="username" class="form-label">username</label>
-                    <input type="text" class="form-control" id="username">
-                    <span class="d-none userError text-danger"> User name is required</span>
-                   
-                </div>
-                <!-- email -->
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="email">
-                    <span class="d-none emailError text-danger"> Email is required</span>
-                </div>
-                <!-- password -->
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password">
-                    <span class="d-none passwordError text-danger">Passowrd is required</span>
-                </div>
-                
-                <button class="btn btn-primary" type="submit">Submit</button>
-            </form>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <form action="" method="post" onsubmit="validate(); return false">
+                    <h2>Sing-Up</h2>
+                    <!-- username -->
+                    <div class="mb-3">
+                        <label for="username" class="form-label">username</label>
+                        <input type="text" class="form-control" id="username">
+                        <span class="d-none userError text-danger"> User name is required</span>
+
+                    </div>
+                    <!-- email -->
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="text" class="form-control" id="email">
+                        <span class="d-none emailError text-danger"> Email is required</span>
+                    </div>
+                    <!-- password -->
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password">
+                        <span class="d-none passwordError text-danger">Passowrd is required</span>
+                    </div>
+                    <!-- gender -->
+                    <div class="mb-3">
+                        <label for="gender" class="form-label">Gender</label>
+
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label" id="gender" for="gender1">Male</label>
+                            <input type="radio" class="form-check-input ms-3" id="gender1">
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label" id="gender" for="gender2">Female</label>
+                            <input type="radio" class="form-check-input" id="gender2">
+                            <span class="d-none genderError text-danger"> gender is required</span>
+
+                        </div>
+                    </div>
+
+                    <button class="btn btn-primary" type="submit">Submit</button>
+                </form>
+            </div>
         </div>
     </div>
- </div>
-
-
-
-
-
-
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -58,36 +65,53 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
-        <script>
-            let username =document.getElementById('username');
-            let email =document.getElementById('email');
-            let password =document.getElementById('password');
+    <script>
+        let username = document.getElementById('username');
+        let email = document.getElementById('email');
+        let password = document.getElementById('password');
+        let gender = document.querySelectorAll("input[nmae='gender']")
 
-            let validate=()=>{
-                if(username.value.trim()=== ""){
-                    document.querySelector('.userError').classList.remove('d-none')
+        let validate = () => {
+            console.log(gender.checked[0]);
+            console.log(gender.checked[1]);
 
-                }else{
-                    document.querySelector('.userError').classList.add('d-none')
+            // username
+            if (username.value.trim() === "") {
+                document.querySelector('.userError').classList.remove('d-none')
 
-                }
-                if(email.value.trim()=== ""){
-                    document.querySelector('.emailError').classList.remove('d-none')
+            } else {
+                document.querySelector('.userError').classList.add('d-none')
 
-                }else{
-                    document.querySelector('.emailError').classList.add('d-none')
+            }
+            // email
+            if (email.value.trim() === "") {
+                document.querySelector('.emailError').classList.remove('d-none')
 
-                }
-                if(password.value.trim()=== ""){
-                    document.querySelector('.passwordError').classList.remove('d-none')
+            } else {
+                document.querySelector('.emailError').classList.add('d-none')
 
-                }else{
-                    document.querySelector('.passwordError').classList.add('d-none')
+            }
+            // password
+            if (password.value.trim() === "") {
+                document.querySelector('.passwordError').classList.remove('d-none')
 
-                }
+            } else {
+                document.querySelector('.passwordError').classList.add('d-none')
+
             }
 
-        </script>
+            // gender
+            if (!gender[0].checked || !gender[1].checked) {
+                document.querySelector('.genderdError').classList.remove('d-none')
+
+            }
+            else {
+                document.querySelector('.genderdError').classList.add('d-none')
+
+            }
+        }
+
+    </script>
 </body>
 
 </html>
